--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,8 @@
                 "version": "1.0.1.0",
                 "changelog": "Initial Release",
                 "targetAbi": "10.8.10.0",
-                "sourceUrl": "https://github.com/vincentroyc/FinTube/archive/refs/heads/feature/prefer-free-format-option.zip",
-                "checksum": "0ee104b7e55b895a4de7124243750c9a",
+                "sourceUrl": "https://github.com/vincentroyc/FinTube/releases/download/pre-release-free-format/Jellyfin.Plugin.FinTube.dll",
+                "checksum": "e299ecdc18de9890308c7d0fe3d80be2",
                 "timestamp": "2024-04-03T23:46:00Z"
             },
             {
