--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,14 @@
         "imageUrl": "https://raw.githubusercontent.com/AECX/FinTube/master/Assets/logo.png",
         "versions": [
             {
+                "version": "1.0.1.4",
+                "changelog": "Initial Release",
+                "targetAbi": "10.8.10.0",
+                "sourceUrl": "https://github.com/vincentroyc/FinTube/releases/download/release%2F1.0.1.4/Jellyfin.Plugin.FinTube.zip",
+                "checksum": "8d0c7e31375866faa6ae0d4dc426e211",
+                "timestamp": "2024-04-04T11:34:00Z"
+            },
+            {
                 "version": "1.0.1.3",
                 "changelog": "Initial Release",
                 "targetAbi": "10.8.10.0",
