--- a/manifest.json
+++ b/manifest.json
@@ -9,20 +9,12 @@
         "imageUrl": "https://raw.githubusercontent.com/AECX/FinTube/master/Assets/logo.png",
         "versions": [
             {
-                "version": "1.0.1.4",
-                "changelog": "Initial Release",
+                "version": "1.0.1.5",
+                "changelog": "Add free format and video resolution options",
                 "targetAbi": "10.8.10.0",
-                "sourceUrl": "https://github.com/vincentroyc/FinTube/releases/download/release%2F1.0.1.4/Jellyfin.Plugin.FinTube.zip",
-                "checksum": "8d0c7e31375866faa6ae0d4dc426e211",
+                "sourceUrl": "https://github.com/vincentroyc/FinTube/releases/download/release%2F1.0.1.5/Jellyfin.Plugin.FinTube.zip",
+                "checksum": "23166b3f66350248e9bd9190673a628a",
                 "timestamp": "2024-04-04T11:34:00Z"
-            },
-            {
-                "version": "1.0.1.3",
-                "changelog": "Initial Release",
-                "targetAbi": "10.8.10.0",
-                "sourceUrl": "https://github.com/vincentroyc/FinTube/releases/download/release%2F1.0.1.3/Jellyfin.Plugin.FinTube.zip",
-                "checksum": "f4fd19159ea27a567ebfe3fb4ae0c41f",
-                "timestamp": "2024-04-03T23:46:00Z"
             },
             {
                 "version": "1.0.0.0",
