--- a/manifest.json
+++ b/manifest.json
@@ -9,11 +9,11 @@
         "imageUrl": "https://raw.githubusercontent.com/AECX/FinTube/master/Assets/logo.png",
         "versions": [
             {
-                "version": "1.0.1.5",
-                "changelog": "Add free format and video resolution options",
+                "version": "1.1.0.0",
+                "changelog": "Add free format, video resolution and library list options",
                 "targetAbi": "10.8.10.0",
-                "sourceUrl": "https://github.com/vincentroyc/FinTube/releases/download/release%2F1.0.1.5/Jellyfin.Plugin.FinTube.zip",
-                "checksum": "23166b3f66350248e9bd9190673a628a",
+                "sourceUrl": "https://github.com/vincentroyc/FinTube/releases/download/release%2F1.1.0.0/Jellyfin.Plugin.FinTube.zip",
+                "checksum": "d89f240d6e68978ddc45c076fcbb1817",
                 "timestamp": "2024-04-04T11:34:00Z"
             },
             {
